--- a/css/leftBox.css
+++ b/css/leftBox.css
@@ -1,8 +1,8 @@
 .leftBox {
     margin-top: 60px;
     display: flex;
+    flex-direction: column;
     width: 405px;
-    height: 2000px;
     background-color: rgb(245, 246, 247);
     float: left;
     font-family: 'Source Sans Pro', Arial, sans-serif;
@@ -42,4 +42,102 @@
     background-color: white;
     font-size: 20px;
     color: rgb(185, 190, 192);
+}
+
+.left_part_common {
+    display: flex;
+    flex-direction: column;
+    margin: 0 30px;
+    padding: 45px 0; 
+    border-bottom: 2px solid rgb(218, 223, 225);
+    color: rgb(61, 68, 73);
+    letter-spacing: 1px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.left_part1 h1 {
+    font-size: 24px;
+    padding: 15px 0;
+    width: 75px;
+    margin-bottom: 30px;
+    border-bottom: 3px solid rgb(245, 106, 106);
+}
+
+.left_part1 li{
+    padding: 20px 0;
+    border-bottom: 1px solid rgb(218, 223, 225);
+}
+
+.left_part1 li:last-child {
+    border: none;
+}
+
+.left_part2 h1 {
+    font-size: 24px;
+    padding: 15px 0;
+    width: 220px;
+    margin-bottom: 30px;
+    border-bottom: 3px solid rgb(245, 106, 106);
+}
+.left_part2 p{
+    font-size: 16px;
+    margin-top: 20px;
+}
+.left_part2 button{
+    height: 40px;
+    width: 95px;
+    border: 2px solid rgb(245, 106, 106);
+    border-radius:6px;
+    color: rgb(245, 106, 106);
+    font-weight: 600;
+    margin-top: 30px;
+    margin-bottom: -20px;
+}
+.left_part2 img{
+    max-width: 100%;
+    border-radius: 6px;
+}
+.left_part2 li{
+    padding: 20px 0;
+    border-bottom: 1px solid rgb(218, 223, 225);
+}
+.left_part2 li:last-child {
+    border: none;
+}
+.left_part3 h1 {
+    font-size: 24px;
+    padding: 15px 0;
+    width: 210px;
+    margin-bottom: 30px;
+    border-bottom: 3px solid rgb(245, 106, 106);
+}
+.left_part3 {
+    font-size: 16px;
+    line-height: 20px;
+}
+.left_part3 li{
+    display: flex;
+    flex-direction: row;
+    padding: 20px 0;
+    border-bottom: 1px solid rgb(218, 223, 225);
+}
+.left_part3 li:last-child {
+    border: none;
+}
+.left_part3 i{
+    height: 100%;
+    font-size: 25px;
+    color: rgb(245, 106, 106);
+    margin-right: 10px;
+}
+.left_part3 p{
+    line-height: 25px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.leftBox > p{
+    margin-top: 30px 0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: rgb(172, 176, 178);
+    border-bottom: none;
 }
